Refactoring java version errors